--- a/files/boot/odroidn2-config.ini
+++ b/files/boot/odroidn2-config.ini
@@ -4,12 +4,13 @@ uuid=PARTUUID=
 rootfstype=ext4
 verbose=1
 usbquirks=usb-storage.quirks=0x1f75:0x0621:u
-extra="clk_ignore_unused mitigations=off"
+extra="mitigations=off maxcpus=6"
 console="console=tty1 ttyAML0,115200n8 console=both"
 
 fk_kvers=Image
 initrd=initrd.gz
 kernel_addr_r=0x10800000
+ramdisk_addr_r=0x30800000
 fdtdir=amlogic
 fdtfile=
 fdt_addr_r=0x20000000
