--- a/files/boot/odroidn2-config.ini
+++ b/files/boot/odroidn2-config.ini
@@ -5,7 +5,7 @@ rootfstype=ext4
 verbose=1
 usbquirks=usb-storage.quirks=0x1f75:0x0621:u
 extra="mitigations=off maxcpus=6"
-console="console=tty1 ttyAML0,115200n8 console=both"
+console="console=tty1 console=ttyAML0,115200n8 console=both"
 
 fk_kvers=Image
 initrd=initrd.gz
