--- a/files/boot/odroidn2-vendor-config.ini
+++ b/files/boot/odroidn2-vendor-config.ini
@@ -5,7 +5,7 @@ rootfstype=ext4
 verbose=1
 usbquirks=usb-storage.quirks=0x1f75:0x0621:u
 extra="cma=800M clk_ignore_unused mitigations=off"
-console="console=tty1 ttyAML0,115200n8 console=both"
+console="console=tty1 console=ttyAML0,115200n8 console=both"
 display="display_autodetect=true overscan=100 hdmimode=1080p60hz monitor_onoff=false voutmode=hdmi"
 cpu_freq="max_freq_a73= max_freq_a53= maxcpus=6"
 
