Amlogic: `additional patching and maintenance`

--- a/files/boot/odroidn2-config.ini
+++ b/files/boot/odroidn2-config.ini
@@ -4,7 +4,7 @@ uuid=PARTUUID=
 rootfstype=ext4
 verbose=1
 usbquirks=usb-storage.quirks=0x1f75:0x0621:u
-extra="mitigations=off maxcpus=6"
+extra="mitigations=off maxcpus=6 iommu.passthrough=1 no_console_suspend"
 console="console=tty1 console=ttyAML0,115200n8 console=both"
 
 fk_kvers=Image
