--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -37,6 +37,7 @@ rootfsxl="0"
 compress_img="0"
 uscripts="0"
 useracct="0"
+petitboot="0"
 
 # open fd
 exec 3>&1
@@ -83,6 +84,9 @@ VALUES=$(dialog --ok-label "Submit" --no-cancel \
 	"Compress img:"	34 1	"$compress_img"		34 15 2 0 \
 	"User scripts:"	35 1	"$uscripts"		35 15 2 0 \
 	"User service:"	36 1	"$useracct"		36 15 2 0 \
+	""		37 1	""			37 14 0 0 \
+	"Odroid N2/+"	38 1	""			38 14 0 0 \
+	"Petitboot:"	39 1	"$petitboot"		39 12 2 0 \
 2>&1 1>&3)
 
 # close fd
@@ -117,7 +121,7 @@ echo rootfsxl= >> tmp0
 echo compress_img= >> tmp0
 echo uscripts= >> tmp0
 echo useracct= >> tmp0
-echo petitboot=0 >> tmp0
+echo petitboot= >> tmp0
 echo emmc=0 >> tmp0
 echo aircrack=0 >> tmp0
 echo CORES=\`nproc\` >> tmp0
