Odroid M1: `u-boot or petitboot option`
depends: gdisk
warning: untested

--- a/files/boot/odroidm1-config.ini
+++ b/files/boot/odroidm1-config.ini
@@ -1,10 +1,18 @@
-[generic]
-#overlay_resize=16384
-#overlay_profile=
-#overlays="i2c0 i2c1"
+[user_options]
+bootlabel=Rockchip
+uuid=PARTUUID=
+rootfstype=ext4
+verbose=1
+usbquirks=usb-storage.quirks=0x1f75:0x0621:u
+extra="pci=nomsi fsck.mode=force"
+console="console=tty1 console=ttyS2,1500000 console=both"
 
-[overlay_custom]
-#overlays="i2c0 i2c1"
+fk_kvers=Image
+initrd=initrd.gz
+fdtdir=rockchip
+fdtfile=
 
-#[overlay_hktft32]
-#overlays="hktft32 ads7846"
+; Device Tree Overlay
+overlay_resize=16384
+overlay_profile=
+; overlays="spi0 i2c0 i2c1 uart0"
