--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -85,7 +85,7 @@ VALUES=$(dialog --ok-label "Submit" --no-cancel \
 	"User scripts:"	35 1	"$uscripts"		35 15 2 0 \
 	"User service:"	36 1	"$useracct"		36 15 2 0 \
 	""		37 1	""			37 14 0 0 \
-	"Odroid N2/+"	38 1	""			38 14 0 0 \
+	"Odroids"	38 1	""			38 14 0 0 \
 	"Petitboot:"	39 1	"$petitboot"		39 12 2 0 \
 2>&1 1>&3)
 
