--- a/files/boot/odroid-vendor-config.ini
+++ b/files/boot/odroid-vendor-config.ini
@@ -7,7 +7,7 @@ usbquirks=usb-storage.quirks=0x1f75:0x0621:u
 extra="cma=800M clk_ignore_unused mitigations=off no_console_suspend"
 console="console=tty1 console=ttyAML0,115200n8 console=both"
 display="display_autodetect=true overscan=100 hdmimode=1080p60hz monitor_onoff=false voutmode=hdmi"
-cpu_freq="max_freq_a73= max_freq_a53= maxcpus=6"
+cpu_freq="max_freq_a73= max_freq_a53="
 
 ; Maximum CPU frequency of ARM A73
 ; N2: 500/667/1000/1200/1398/1512/1608/1704/1800 (Stock)/1908/2004
