--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -121,6 +121,7 @@ echo useracct= >> tmp0
 echo petitboot= >> tmp0
 echo emmc=0 >> tmp0
 echo aircrack=0 >> tmp0
+echo USER_PKGS='"''"' >> tmp0
 echo CORES=\`nproc\` >> tmp0
 echo CFLAGS='"''"' >> tmp0
 echo KBUSER='"'marvin'"' >> tmp0
@@ -138,7 +139,7 @@ echo "echo -n '${TIMEZONE}' > /etc/timezone" >> tmp0
 echo "}" >> tmp0
 echo NAMESERVER1='"'${USER_NAMESERVER1}'"' >> tmp0
 echo NAMESERVER2='"'${USER_NAMESERVER2}'"' >> tmp0
-echo builder=4.2 >> tmp0
+echo builder=4.3 >> tmp0
 echo '"' > tmp2
 echo '"' >> tmp2
 echo '"' >> tmp2
@@ -168,12 +169,12 @@ sed -i '7i### DISTRIBUTION AND RELEASE' userdata.txt
 sed -i '10i### UBOOT AND LINUX KERNEL' userdata.txt
 sed -i '18i### WIRELESS' userdata.txt
 sed -i '23i### CUSTOM' userdata.txt
-sed -i '35i### COMPILER TUNING' userdata.txt
-sed -i '38i### WHOAMI AND HOST' userdata.txt
-sed -i '41i### LOCALES' userdata.txt
-sed -i '49i### TIMEZONE' userdata.txt
-sed -i '54i### NAME SERVER' userdata.txt
-sed -i '57i### DO NOT EDIT BELOW THIS LINE' userdata.txt
+sed -i '36i### COMPILER TUNING' userdata.txt
+sed -i '30i### WHOAMI AND HOST' userdata.txt
+sed -i '42i### LOCALES' userdata.txt
+sed -i '50i### TIMEZONE' userdata.txt
+sed -i '55i### NAME SERVER' userdata.txt
+sed -i '58i### DO NOT EDIT BELOW THIS LINE' userdata.txt
 
 # clear screen
 clear -x
