--- a/files/boot/odroidm1-config.ini
+++ b/files/boot/odroidm1-config.ini
@@ -4,7 +4,7 @@ uuid=PARTUUID=
 rootfstype=ext4
 verbose=1
 usbquirks=usb-storage.quirks=0x1f75:0x0621:u
-extra="pci=nomsi fsck.mode=force"
+extra="pci=nomsi fsck.mode=force cma=128m"
 console="console=tty1 console=ttyS2,1500000 console=both"
 
 fk_kvers=Image
