--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -1,4 +1,6 @@
 #!/bin/bash
+LATEST="https://kernel.org/releases.json"
+LTS=$(curl -Ls $LATEST | grep -w "version" | awk 'NR % 4 == 0' | sed -r '$ d' | sed -r 's/"version"://g' | sed -r '1s/\s+//g' | sed 's/,//g' | sed 's/\"//g')
 RED="\e[0;31m"
 FIN="\e[0m"
 
@@ -18,7 +20,7 @@ HOSTNAME="default"
 DISTRO="debian"
 DISTRO_VERSION="bullseye"
 UBOOT_VERSION="v2022.04"
-VERSION="5.15.40"
+VERSION="$LTS"
 BUILD_VERSION="1"
 menuconfig="0"
 COMPILER="gcc-10"
