make config: `maintenance`

--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -1,6 +1,6 @@
 #!/bin/bash
 LATEST="https://kernel.org/releases.json"
-LTS=$(curl -Ls $LATEST | grep -w "version" | awk 'NR % 4 == 0' | sed -r '$ d' | sed -r 's/"version"://g' | sed -r '1s/\s+//g' | sed 's/,//g' | sed 's/\"//g')
+LTS=$(curl -Ls $LATEST | grep -w "version" | sed -n 4p | sed -r 's/"version"://g' | sed -r '1s/\s+//g' | sed 's/,//g' | sed 's/\"//g')
 RED="\e[0;31m"
 FIN="\e[0m"
 
