--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -7,7 +7,7 @@ FIN="\e[0m"
 if [[ `curl -I https://github.com 2>&1 | grep 'HTTP/2 200'` ]]; then
 	:;
 else
-	echo -e "The Debian Image Builder requires internet connection."
+	echo -e "The builder requires a internet connection."
 	exit 0;
 fi
 if [[ `command -v jq` ]]; then
@@ -23,7 +23,7 @@ else
 	NAME="";
 	USERNAME="";
 	PASSWORD="";
-	VERSION="$LATEST_LTS"
+	VERSION="$LATEST_LTS";
 	LOCALE="en_US.UTF-8";
 	TIMEZONE="America/New_York";
 	USER_NAMESERVER1="8.8.8.8";
