Defconfig: `amlogic and odroid`

--- a/defconfig/amlogic_defconfig
+++ b/defconfig/amlogic_defconfig
@@ -110,6 +110,7 @@ CONFIG_IOSCHED_BFQ=y
 CONFIG_BFQ_GROUP_IOSCHED=y
 CONFIG_BINFMT_MISC=y
 CONFIG_KSM=y
+CONFIG_DEFAULT_MMAP_MIN_ADDR=32768
 CONFIG_TRANSPARENT_HUGEPAGE=y
 CONFIG_TRANSPARENT_HUGEPAGE_MADVISE=y
 CONFIG_CLEANCACHE=y
