--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -46,7 +46,7 @@ custom_defconfig="0"
 MYCONFIG=""
 logging="0"
 verbose="0"
-rootfsxl="0"
+devrootfs="0"
 compress_img="0"
 uscripts="0"
 useracct="0"
@@ -92,7 +92,7 @@ VALUES=$(dialog --ok-label "Submit" --no-cancel \
 	"User Options"	29 1	""			29 14 0 0 \
 	"Logging:"	30 1	"$logging"		30 10 2 0 \
 	"Verbosity:"	31 1	"$verbose"		31 12 2 0 \
-	"Rootfs XL:"	32 1	"$rootfsxl"		32 12 2 0 \
+	"Dev. Rootfs:"	32 1	"$devrootfs"		32 12 2 0 \
 	"Compress img:"	33 1	"$compress_img"		33 15 2 0 \
 	"User scripts:"	34 1	"$uscripts"		34 15 2 0 \
 	"User service:"	35 1	"$useracct"		35 15 2 0 \
@@ -128,7 +128,7 @@ echo custom_defconfig= >> tmp0
 echo MYCONFIG='"' >> tmp0
 echo logging= >> tmp0
 echo verbose= >> tmp0
-echo rootfsxl= >> tmp0
+echo devrootfs= >> tmp0
 echo compress_img= >> tmp0
 echo uscripts= >> tmp0
 echo useracct= >> tmp0
@@ -153,7 +153,7 @@ echo "echo -n '${TIMEZONE}' > /etc/timezone" >> tmp0
 echo "}" >> tmp0
 echo NAMESERVER1='"'${USER_NAMESERVER1}'"' >> tmp0
 echo NAMESERVER2='"'${USER_NAMESERVER2}'"' >> tmp0
-echo builder=4.3 >> tmp0
+echo builder=4.4 >> tmp0
 echo '"' > tmp2
 echo '"' >> tmp2
 echo '"' >> tmp2
