--- a/defconfig/odroid-server_defconfig
+++ b/defconfig/odroid-server_defconfig
@@ -2016,6 +2016,7 @@ CONFIG_ASYNC_TX_DMA=y
 CONFIG_VHOST_NET=m
 CONFIG_VHOST_SCSI=m
 CONFIG_VHOST_VSOCK=m
+CONFIG_STAGING=y
 # CONFIG_SURFACE_PLATFORMS is not set
 CONFIG_COMMON_CLK_RK808=y
 CONFIG_COMMON_CLK_SCMI=m
@@ -2323,6 +2324,7 @@ CONFIG_TSYS01=m
 CONFIG_TSYS02D=m
 CONFIG_MAX31856=m
 CONFIG_PWM=y
+CONFIG_PWM_GPIO=y
 CONFIG_PWM_MESON=y
 CONFIG_PHY_XGENE=y
 CONFIG_PHY_CADENCE_SIERRA=m
