Debian Image Builder: `enable root`
root:toor
userdata.txt: rootpasswd=1

--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -136,6 +136,7 @@ echo petitboot= >> tmp0
 echo emmc=0 >> tmp0
 echo aircrack=0 >> tmp0
 echo networkmanager=0 >> tmp0
+echo rootpasswd=0 >> tmp0
 echo USER_PKGS='"''"' >> tmp0
 echo CORES=\`nproc\` >> tmp0
 echo CFLAGS='"''"' >> tmp0
@@ -154,7 +155,7 @@ echo "echo -n '${TIMEZONE}' > /etc/timezone" >> tmp0
 echo "}" >> tmp0
 echo NAMESERVER1='"'${USER_NAMESERVER1}'"' >> tmp0
 echo NAMESERVER2='"'${USER_NAMESERVER2}'"' >> tmp0
-echo builder=4.5 >> tmp0
+echo builder=4.6 >> tmp0
 echo '"' > tmp2
 echo '"' >> tmp2
 echo '"' >> tmp2
@@ -184,12 +185,12 @@ sed -i '7i### DISTRIBUTION AND RELEASE' userdata.txt
 sed -i '10i### UBOOT AND LINUX KERNEL' userdata.txt
 sed -i '18i### WIRELESS' userdata.txt
 sed -i '23i### CUSTOM' userdata.txt
-sed -i '37i### COMPILER TUNING' userdata.txt
-sed -i '40i### WHOAMI AND HOST' userdata.txt
-sed -i '43i### LOCALES' userdata.txt
-sed -i '51i### TIMEZONE' userdata.txt
-sed -i '56i### NAME SERVER' userdata.txt
-sed -i '59i### DO NOT EDIT BELOW THIS LINE' userdata.txt
+sed -i '38i### COMPILER TUNING' userdata.txt
+sed -i '41i### WHOAMI AND HOST' userdata.txt
+sed -i '44i### LOCALES' userdata.txt
+sed -i '52i### TIMEZONE' userdata.txt
+sed -i '57i### NAME SERVER' userdata.txt
+sed -i '60i### DO NOT EDIT BELOW THIS LINE' userdata.txt
 
 # clear screen
 clear -x
