make config: `network manager`

--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -32,6 +32,7 @@ MOTD="default"
 HOSTNAME="default"
 DISTRO="debian"
 DISTRO_VERSION="bullseye"
+networkmanager="0"
 UBOOT_VERSION="v2022.04"
 BUILD_VERSION="1"
 menuconfig="0"
@@ -61,44 +62,45 @@ VALUES=$(dialog --ok-label "Submit" --no-cancel \
 	  --title "Config Menu" \
 	  --form "" \
 0 40 0 \
-	"Name:"		1 1	"$NAME"			1 7 26 0 \
-	"Username:"	2 1	"$USERNAME"		2 11 22 0 \
-	"Password:"	3 1	"$PASSWORD"		3 11 22 0 \
-	"Branding:"	4 1	"$MOTD"			4 11 22 0 \
-	"Hostname:"	5 1	"$HOSTNAME"		5 11 22 0 \
-	""		6 1	""	 		6 14 0 0 \
-	"Distribution"	7 1	""	 		7 14 0 0 \
-	"Distro:"	8 1	"$DISTRO"		8 9 24 0 \
-	"Release:"	9 1	"$DISTRO_VERSION"	9 10 23 0 \
-	""		10 1	""			10 14 0 0 \
-	"U-Boot:"   	11 1    "$UBOOT_VERSION"	11 9 13 0 \
-	"Branch:"   	12 1    "$VERSION"		12 9 10 0 \
-	"Build:"   	13 1    "$BUILD_VERSION"	13 8 4 0 \
-	"Menuconfig:"	14 1	"$menuconfig"		14 13 2 0 \
-	"Compiler:"	15 1	"$COMPILER"		15 11 9 0 \
-	"Crosscompile:" 16 1	"$crosscompile"		16 15 2 0 \
-	"Caching on:"	17 1	"$ccache"	 	17 13 2 0 \
-	""		18 1	""			18 14 0 0 \
-	"Wireless"	19 1	""			19 14 0 0 \
-	"rtl88XXau:"	20 1	"$rtl88XXau"		20 12 2 0 \
-	"rtl88X2bu:"	21 1	"$rtl88X2bu"		21 12 2 0 \
-	"rtl88XXcu:"	22 1	"$rtl88XXcu"		22 12 2 0 \
-	"rtl8188eu:"	23 1	"$rtl8188eu"		23 12 2 0 \
-	""		24 1	""			24 14 0 0 \
-	"Customize"	25 1	""			25 14 0 0 \
-	"Defconfig:"	26 1	"$custom_defconfig"	26 12 2 0 \
-	"Name:"		27 1	"$MYCONFIG"		27 7 26 0 \
-	""		28 1	""			28 14 0 0 \
-	"User Options"	29 1	""			29 14 0 0 \
-	"Logging:"	30 1	"$logging"		30 10 2 0 \
-	"Verbosity:"	31 1	"$verbose"		31 12 2 0 \
-	"Dev. Rootfs:"	32 1	"$devrootfs"		32 14 2 0 \
-	"Compress img:"	33 1	"$compress_img"		33 15 2 0 \
-	"User scripts:"	34 1	"$uscripts"		34 15 2 0 \
-	"User service:"	35 1	"$useracct"		35 15 2 0 \
-	""		36 1	""			36 14 0 0 \
-	"Odroids"	37 1	""			37 14 0 0 \
-	"Petitboot:"	38 1	"$petitboot"		38 12 2 0 \
+	" Name:"		1 1	"$NAME"			1 8 26 0 \
+	" Username:"		2 1	"$USERNAME"		2 12 22 0 \
+	" Password:"		3 1	"$PASSWORD"		3 12 22 0 \
+	" Branding:"		4 1	"$MOTD"			4 12 22 0 \
+	" Hostname:"		5 1	"$HOSTNAME"		5 12 22 0 \
+	" "			6 1	""	 		6 14 0 0 \
+	" Distribution"		7 1	""	 		7 14 0 0 \
+	" Distro:"		8 1	"$DISTRO"		8 10 24 0 \
+	" Release:"		9 1	"$DISTRO_VERSION"	9 11 23 0 \
+	" Network Manager:"	10 1	"$networkmanager"	10 19 2 0 \
+	" "			11 1	""			11 14 0 0 \
+	" U-Boot:"   		12 1    "$UBOOT_VERSION"	12 10 13 0 \
+	" Branch:"   		13 1    "$VERSION"		13 10 10 0 \
+	" Build:"   		14 1    "$BUILD_VERSION"	14 9 4 0 \
+	" Menuconfig:"		15 1	"$menuconfig"		15 14 2 0 \
+	" Compiler:"		16 1	"$COMPILER"		16 12 9 0 \
+	" Crosscompile:" 	17 1	"$crosscompile"		17 16 2 0 \
+	" Caching on:"		18 1	"$ccache"	 	18 14 2 0 \
+	" "			19 1	""			19 14 0 0 \
+	" Wireless"		20 1	""			20 14 0 0 \
+	" rtl88XXau:"		21 1	"$rtl88XXau"		21 13 2 0 \
+	" rtl88X2bu:"		22 1	"$rtl88X2bu"		22 13 2 0 \
+	" rtl88XXcu:"		23 1	"$rtl88XXcu"		23 13 2 0 \
+	" rtl8188eu:"		24 1	"$rtl8188eu"		24 13 2 0 \
+	" "			25 1	""			25 14 0 0 \
+	" Customize"		26 1	""			26 14 0 0 \
+	" Defconfig:"		27 1	"$custom_defconfig"	27 13 2 0 \
+	" Name:"		28 1	"$MYCONFIG"		28 8 26 0 \
+	" "			29 1	""			29 14 0 0 \
+	" User Options"		30 1	""			30 14 0 0 \
+	" Logging:"		31 1	"$logging"		31 11 2 0 \
+	" Verbosity:"		32 1	"$verbose"		32 13 2 0 \
+	" Dev. Rootfs:"		33 1	"$devrootfs"		33 15 2 0 \
+	" Compress img:"	34 1	"$compress_img"		34 16 2 0 \
+	" User scripts:"	35 1	"$uscripts"		35 16 2 0 \
+	" User service:"	36 1	"$useracct"		36 16 2 0 \
+	" "			37 1	""			37 14 0 0 \
+	" Odroids"		38 1	""			38 14 0 0 \
+	" Petitboot:"		39 1	"$petitboot"		39 13 2 0 \
 2>&1 1>&3)
 
 # close fd
@@ -113,6 +115,7 @@ echo MOTD='"' >> tmp0
 echo HOSTNAME='"' >> tmp0
 echo DISTRO='"' >> tmp0
 echo DISTRO_VERSION='"' >> tmp0
+echo networkmanager= >> tmp0
 echo UBOOT_VERSION='"' >> tmp0
 echo VERSION='"' >> tmp0
 echo BUILD_VERSION='"' >> tmp0
@@ -135,7 +138,6 @@ echo useracct= >> tmp0
 echo petitboot= >> tmp0
 echo emmc=0 >> tmp0
 echo aircrack=0 >> tmp0
-echo networkmanager=0 >> tmp0
 echo rootpasswd=0 >> tmp0
 echo USER_PKGS='"''"' >> tmp0
 echo CORES=\`nproc\` >> tmp0
@@ -163,6 +165,7 @@ echo '"' >> tmp2
 echo '"' >> tmp2
 echo '"' >> tmp2
 echo '"' >> tmp2
+echo >> tmp2
 echo '"' >> tmp2
 echo '"' >> tmp2
 echo '"' >> tmp2
@@ -182,9 +185,9 @@ rm -f tmp0 tmp1 tmp2
 # categories
 sed -i '1i### USER INFORMATION' userdata.txt
 sed -i '7i### DISTRIBUTION AND RELEASE' userdata.txt
-sed -i '10i### UBOOT AND LINUX KERNEL' userdata.txt
-sed -i '18i### WIRELESS' userdata.txt
-sed -i '23i### CUSTOM' userdata.txt
+sed -i '11i### UBOOT AND LINUX KERNEL' userdata.txt
+sed -i '19i### WIRELESS' userdata.txt
+sed -i '24i### CUSTOM' userdata.txt
 sed -i '38i### COMPILER TUNING' userdata.txt
 sed -i '41i### WHOAMI AND HOST' userdata.txt
 sed -i '44i### LOCALES' userdata.txt
