`Debian Image Builder`
make config: maintenance
menu-config: change hostname option

--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -94,7 +94,7 @@ VALUES=$(dialog --ok-label "Submit" --no-cancel \
 	" User Options"		30 1	""			30 14 0 0 \
 	" Logging:"		31 1	"$logging"		31 11 2 0 \
 	" Verbosity:"		32 1	"$verbose"		32 13 2 0 \
-	" Dev. Rootfs:"		33 1	"$devrootfs"		33 15 2 0 \
+	" Devel Rootfs:"	33 1	"$devrootfs"		33 16 2 0 \
 	" Compress img:"	34 1	"$compress_img"		34 16 2 0 \
 	" User scripts:"	35 1	"$uscripts"		35 16 2 0 \
 	" User service:"	36 1	"$useracct"		36 16 2 0 \
