--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -14,7 +14,7 @@ else
 fi
 LATEST_LTS=$(curl -Ls $JSON_FILE | grep -w "version" | sed -n $LINE | sed -r 's/"version"://g' | sed -r '1s/\s+//g' | sed 's/,//g' | sed 's/\"//g')
 LATEST_STABLE=$(curl -s $JSON_FILE | jq '.latest_stable.version' -r)
-RED="\e[0;31m"
+COL="\e[0;37m"
 FIN="\e[0m"
 if [ -f profile.txt ]; then
 	source profile.txt;
@@ -199,4 +199,4 @@ sed -i '60i### DO NOT EDIT BELOW THIS LINE' userdata.txt
 clear -x
 
 # userdata
-echo -e "${RED}userdata file created${FIN}."
+echo -e "${COL}userdata file created${FIN}."
