odroid xu4: `boot.ini`

--- a/files/boot/odroid/odroidxu4-boot.ini
+++ b/files/boot/odroid/odroidxu4-boot.ini
@@ -26,7 +26,7 @@ if test "${disable_vu7}" = "false"; then setenv hid_quirks "usbhid.quirks=0x0eef
 if test "${external_watchdog}" = "true"; then setenv external_watchdog "external_watchdog=${external_watchdog} external_watchdog_debounce=${external_watchdog_debounce}"; fi
 
 # Boot Args
-setenv bootargs "console=tty1 console=ttySAC2,115200n8 console=both root=PARTUUID= rootwait ro fsck.repair=yes net.ifnames=0 loglevel=1 ${videoconfig} ${hdmi_phy_control} ${hid_quirks} smsc95xx.macaddr=${macaddr} ${external_watchdog}"
+setenv bootargs "console=tty1 console=ttySAC2,115200n8 console=both root=PARTUUID= rootwait ro fsck.repair=yes net.ifnames=0 loglevel=1 ${videoconfig} ${hid_quirks} smsc95xx.macaddr=${macaddr}"
 
 # Load kernel, initrd and dtb in that sequence
 fatload mmc 0:1 ${k_addr} Image
