odroid xu4: `maintenance`

--- a/files/boot/odroid/odroidxu4-boot.ini
+++ b/files/boot/odroid/odroidxu4-boot.ini
@@ -3,8 +3,8 @@ ODROIDXU-UBOOT-CONFIG
 setenv initrd_high "0xffffffff"
 setenv fdt_high "0xffffffff"
 setenv macaddr "00:1e:06:61:7a:39"
-setenv vout "hdmi"
-setenv HPD "true"
+# setenv vout "hdmi"
+# setenv HPD "true"
 setenv cecenable "false"
 setenv disable_vu7 "false"
 setenv ddr_freq 825
@@ -20,7 +20,7 @@ setenv config_addr_r "0x4B000000"
 load mmc 0:1 ${config_addr_r} config.ini \
     && ini generic ${config_addr_r}
 
-setenv hdmi_phy_control "HPD=${HPD} vout=${vout}"
+# setenv hdmi_phy_control "HPD=${HPD} vout=${vout}"
 if test "${cecenable}" = "false"; then fdt rm /soc/cec@101B0000; fi
 if test "${disable_vu7}" = "false"; then setenv hid_quirks "usbhid.quirks=0x0eef:0x0005:0x0004"; fi
 if test "${external_watchdog}" = "true"; then setenv external_watchdog "external_watchdog=${external_watchdog} external_watchdog_debounce=${external_watchdog_debounce}"; fi
