--- a/files/boot/odroid/odroidxu4-config.ini
+++ b/files/boot/odroid/odroidxu4-config.ini
@@ -113,11 +113,11 @@ macaddr=00:1e:06:61:7a:39
 
 ; voutm : hdmi or dvi
 ; hdmi / dvi
-vout=hdmi
+; vout=hdmi
 
 ; HPD enable/disable option
 ; false / true
-HPD=true
+; HPD=true
 
 ; Enable/Disable CEC
 cecenable=false
