--- a/files/boot/odroid/odroidc1-boot.ini
+++ b/files/boot/odroid/odroidc1-boot.ini
@@ -1,11 +1,12 @@
 ODROIDC-UBOOT-CONFIG
 
+setenv uuid "root=PARTUUID="
 setenv console "console=tty1 console=ttyAML0,115200n8 console=both"
 setenv extra "no_console_suspend net.ifnames=0 fsck.repair=yes"
 #setenv hid_quirks "usbhid.quirks=0x0eef:0x0005:0x0004"
 
 # Boot Arguments
-setenv bootargs "root=PARTUUID= rootwait ro ${console} rootfstype=ext4 loglevel=1 ${extra}"
+setenv bootargs "${uuid} rootwait ro ${console} rootfstype=ext4 loglevel=1 ${extra}"
 
 # Booting
 fatload mmc 0:1 0x20800000 uImage
