--- a/defconfig/meson8b_defconfig
+++ b/defconfig/meson8b_defconfig
@@ -1397,10 +1397,14 @@ CONFIG_THERMAL_WRITABLE_TRIPS=y
 CONFIG_THERMAL_GOV_FAIR_SHARE=y
 CONFIG_THERMAL_GOV_BANG_BANG=y
 CONFIG_THERMAL_GOV_USER_SPACE=y
+CONFIG_THERMAL_GOV_POWER_ALLOCATOR=y
 CONFIG_CPU_THERMAL=y
 CONFIG_DEVFREQ_THERMAL=y
 CONFIG_THERMAL_MMIO=m
+CONFIG_DA9062_THERMAL=m
 CONFIG_AMLOGIC_THERMAL=m
+CONFIG_GENERIC_ADC_THERMAL=m
+CONFIG_KHADAS_MCU_FAN_THERMAL=m
 CONFIG_WATCHDOG=y
 CONFIG_WATCHDOG_SYSFS=y
 CONFIG_WATCHDOG_PRETIMEOUT_GOV=y
@@ -1936,8 +1940,15 @@ CONFIG_DRM_LIMA=m
 CONFIG_DRM_PANFROST=m
 CONFIG_DRM_LEGACY=y
 CONFIG_FB=y
+CONFIG_FIRMWARE_EDID=y
 CONFIG_FB_UVESA=m
 CONFIG_FB_SIMPLE=m
+CONFIG_FB_OMAP2=m
+# CONFIG_FB_OMAP2_DEBUG_SUPPORT is not set
+CONFIG_FB_OMAP5_DSS_HDMI=y
+CONFIG_FB_OMAP2_CONNECTOR_DVI=m
+CONFIG_FB_OMAP2_CONNECTOR_HDMI=m
+CONFIG_FB_OMAP2_CONNECTOR_ANALOG_TV=m
 CONFIG_LCD_CLASS_DEVICE=m
 CONFIG_LCD_L4F00242T03=m
 CONFIG_LCD_LMS283GF05=m
