--- a/defconfig/rockchip64_defconfig
+++ b/defconfig/rockchip64_defconfig
@@ -1216,6 +1216,7 @@ CONFIG_GPIO_HLWD=m
 CONFIG_GPIO_LOGICVC=m
 CONFIG_GPIO_MB86S7X=m
 CONFIG_GPIO_PL061=y
+CONFIG_GPIO_SYSCON=m
 CONFIG_GPIO_SAMA5D2_PIOBU=m
 CONFIG_GPIO_XILINX=y
 CONFIG_GPIO_AMD_FCH=m
