--- a/defconfig/nanopi-r5s_defconfig
+++ b/defconfig/nanopi-r5s_defconfig
@@ -412,6 +412,7 @@ CONFIG_ROCKCHIP_INNO_HDMI=y
 CONFIG_ROCKCHIP_LVDS=y
 CONFIG_ROCKCHIP_RGB=y
 CONFIG_ROCKCHIP_RK3066_HDMI=y
+CONFIG_DRM_SIMPLEDRM=m
 CONFIG_FB=m
 CONFIG_FIRMWARE_EDID=y
 CONFIG_FB_SIMPLE=m
