allwinner: `sun8i hdmi audio`

--- a/defconfig/sun8i_defconfig
+++ b/defconfig/sun8i_defconfig
@@ -1715,6 +1715,7 @@ CONFIG_SND_SUN8I_CODEC=y
 CONFIG_SND_SUN8I_CODEC_ANALOG=y
 CONFIG_SND_SUN4I_I2S=y
 CONFIG_SND_SUN4I_SPDIF=y
+CONFIG_SND_SUN9I_HDMI_AUDIO=y
 CONFIG_SND_SOC_XILINX_I2S=m
 CONFIG_SND_SOC_XILINX_AUDIO_FORMATTER=m
 CONFIG_SND_SOC_XILINX_SPDIF=m
@@ -2208,6 +2209,7 @@ CONFIG_AD9834=m
 CONFIG_STAGING_MEDIA=y
 CONFIG_VIDEO_SUNXI=y
 CONFIG_VIDEO_SUNXI_CEDRUS=m
+CONFIG_STAGING_BOARD=y
 CONFIG_COMMON_CLK_XLNX_CLKWZRD=m
 CONFIG_FB_TFT=m
 CONFIG_FB_TFT_AGM1264K_FL=m
