--- a/defconfig/sun50i_defconfig
+++ b/defconfig/sun50i_defconfig
@@ -1238,6 +1238,7 @@ CONFIG_SND_SUN8I_CODEC_ANALOG=m
 CONFIG_SND_SUN50I_CODEC_ANALOG=m
 CONFIG_SND_SUN4I_I2S=m
 CONFIG_SND_SUN4I_SPDIF=m
+CONFIG_SND_SUN9I_HDMI_AUDIO=m
 CONFIG_SND_SOC_AC97_CODEC=m
 CONFIG_SND_SOC_ADAU1701=m
 CONFIG_SND_SOC_ADAU1761_I2C=m
@@ -1630,6 +1631,7 @@ CONFIG_STAGING_MEDIA=y
 CONFIG_VIDEO_SUNXI=y
 CONFIG_VIDEO_SUNXI_CEDRUS=m
 CONFIG_XIL_AXIS_FIFO=m
+CONFIG_STAGING_BOARD=y
 CONFIG_COMMON_CLK_MAX9485=m
 CONFIG_COMMON_CLK_SCPI=y
 CONFIG_COMMON_CLK_SI544=m
